2012-01-17  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: make PortFactory.get() be fully data-driven
        https://bugs.webkit.org/show_bug.cgi?id=76360

        Reviewed by Eric Seidel.

        Refactor PortFactory.get() to be fully data-driven.

        * Scripts/webkitpy/layout_tests/port/factory.py:
        (PortFactory):
        (PortFactory._default_port):
        (PortFactory.get):
        (PortFactory.get.in):
        * Scripts/webkitpy/layout_tests/port/factory_unittest.py:
        (FactoryTest.assert_port):

2012-01-17  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: add determine_full_port_name(), clean up port.__init__()
        https://bugs.webkit.org/show_bug.cgi?id=76357

        Reviewed by Adam Barth.

        Each Port class is now required to implement a 'port_name' field
        that will match the start of all ports constructed by this class and
        a 'determine_full_port_name' field that will make the port
        fully-qualified.

        * Scripts/webkitpy/layout_tests/port/apple.py:
        (ApplePort.__init__):
        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port):
        (Port.determine_port_name):
        (Port.__init__):
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        (ChromiumPort.for):
        (ChromiumPort.__init__):
        (ChromiumPort):
        (ChromiumPort._chromium_base_dir):
        (ChromiumPort.path_from_chromium_base):
        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:
        (ChromiumGpuLinuxPort):
        (ChromiumGpuLinuxPort.__init__):
        (ChromiumGpuMacPort):
        (ChromiumGpuMacPort.__init__):
        (ChromiumGpuWinPort):
        (ChromiumGpuWinPort.__init__):
        * Scripts/webkitpy/layout_tests/port/chromium_linux.py:
        (ChromiumLinuxPort):
        (ChromiumLinuxPort.determine_port_name):
        (ChromiumLinuxPort.__init__):
        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
        (ChromiumMacPort):