@@ -1,5 +1,15 @@
 2012-01-17  Dirk Pranke  <dpranke@chromium.org>
 
+        Fix failures in test-webkitpy caused by r105177.
+
+        Unreviewed, build fix.
+
+        * Scripts/webkitpy/layout_tests/port/chromium_linux.py:
+        (ChromiumLinuxPort._determine_driver_path_statically):
+        (ChromiumLinuxPort._static_build_path):
+
+2012-01-17  Dirk Pranke  <dpranke@chromium.org>
+
         webkitpy: make PortFactory.get() be fully data-driven
         https://bugs.webkit.org/show_bug.cgi?id=76360
 
